--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "next": "14.1.2",
     "react": "^18",
-    "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
