--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["next"]
+  "plugins": ["next-on-pages"],
+  "extends": ["next", "plugin:next-on-pages/recommended"],
+  "rules": {
+    "next-on-pages/no-unsupported-configs": "warn"
+  }
 }
