--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.1.2",
+    "eslint-plugin-next-on-pages": "^1.10.0",
     "typescript": "^5"
   }
 }
