--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
     "pages:build": "npx @cloudflare/next-on-pages"
   },
   "dependencies": {
-    "next": "14.1.2",
+    "next": "^15",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.2",
+    "eslint-config-next": "15.0.3",
     "eslint-plugin-next-on-pages": "^1.10.0",
     "typescript": "^5"
   }
